// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders multi route 1`] = `
<DocumentFragment>
  .c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E8ECFB;
  border: unset;
  border-radius: 0.5rem;
  color: #000;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 6px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: 500;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c11 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c12 {
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: -1px;
}

.c12 > * {
  margin: 1px !important;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c3 {
  display: grid;
  grid-template-columns: 24px 1fr 24px;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.1rem 0.5rem;
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  width: calc(100%);
  z-index: 1;
  opacity: 0.5;
}

.c6 path {
  stroke: #99A1BD;
}

.c8 {
  background-color: #E8ECFB;
  border-radius: 8px;
  display: grid;
  font-size: 12px;
  grid-gap: 4px;
  grid-auto-flow: column;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  padding: 4px 6px 4px 4px;
  z-index: 1020;
}

.c9 {
  background-color: #C9D0E7;
  border-radius: 4px;
  color: #5E6887;
  font-size: 10px;
  padding: 2px 4px;
  z-index: 1021;
}

.c10 {
  word-break: normal;
}

<div
    class="c0 css-vurnku"
  >
    <div
      class="c1 c2 c3"
    >
      CurrencyLogo currency=USDC
      <div
        class="c1 c2 c4"
      >
        <div
          class="c5"
        >
          <svg
            class="c6"
          >
            dot_line.svg
          </svg>
        </div>
        <div
          class="c7 c8"
        >
          <div
            class="c7 c9"
          >
            <div
              class="c10 css-15li2d9"
            >
              V2
            </div>
          </div>
          <div
            class="c10 css-1aekuku"
            style="min-width: auto;"
          >
            75%
          </div>
        </div>
        <div
          class="c11 c2 c12"
          style="justify-content: space-evenly; z-index: 2;"
          width="100%"
        >
          Popover
        </div>
      </div>
      CurrencyLogo currency=DAI
    </div>
    <div
      class="c1 c2 c3"
    >
      CurrencyLogo currency=USDC
      <div
        class="c1 c2 c4"
      >
        <div
          class="c5"
        >
          <svg
            class="c6"
          >
            dot_line.svg
          </svg>
        </div>
        <div
          class="c7 c8"
        >
          <div
            class="c7 c9"
          >
            <div
              class="c10 css-15li2d9"
            >
              V3
            </div>
          </div>
          <div
            class="c10 css-1aekuku"
            style="min-width: auto;"
          >
            25%
          </div>
        </div>
        <div
          class="c11 c2 c12"
          style="justify-content: space-evenly; z-index: 2;"
          width="100%"
        >
          PopoverPopover
        </div>
      </div>
      CurrencyLogo currency=DAI
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders single route 1`] = `
<DocumentFragment>
  .c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E8ECFB;
  border: unset;
  border-radius: 0.5rem;
  color: #000;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 6px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-weight: 500;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c11 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c12 {
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: -1px;
}

.c12 > * {
  margin: 1px !important;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c3 {
  display: grid;
  grid-template-columns: 24px 1fr 24px;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.1rem 0.5rem;
  position: relative;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  width: calc(100%);
  z-index: 1;
  opacity: 0.5;
}

.c6 path {
  stroke: #99A1BD;
}

.c8 {
  background-color: #E8ECFB;
  border-radius: 8px;
  display: grid;
  font-size: 12px;
  grid-gap: 4px;
  grid-auto-flow: column;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  padding: 4px 6px 4px 4px;
  z-index: 1020;
}

.c9 {
  background-color: #C9D0E7;
  border-radius: 4px;
  color: #5E6887;
  font-size: 10px;
  padding: 2px 4px;
  z-index: 1021;
}

.c10 {
  word-break: normal;
}

<div
    class="c0 css-vurnku"
  >
    <div
      class="c1 c2 c3"
    >
      CurrencyLogo currency=USDC
      <div
        class="c1 c2 c4"
      >
        <div
          class="c5"
        >
          <svg
            class="c6"
          >
            dot_line.svg
          </svg>
        </div>
        <div
          class="c7 c8"
        >
          <div
            class="c7 c9"
          >
            <div
              class="c10 css-15li2d9"
            >
              V3
            </div>
          </div>
          <div
            class="c10 css-1aekuku"
            style="min-width: auto;"
          >
            100%
          </div>
        </div>
        <div
          class="c11 c2 c12"
          style="justify-content: space-evenly; z-index: 2;"
          width="100%"
        >
          Popover
        </div>
      </div>
      CurrencyLogo currency=DAI
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders when no routes are provided 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

<div
    class="c0 css-vurnku"
  />
</DocumentFragment>
`;
